--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE=crud
 DATABASE_HOST=127.0.0.1
 DATABASE_USER=root
-DATABASE_URL=`mysql://root:@p127.0.0.1:8081/crud`
+DATABASE_URL=`mysql://root:@127.0.0.1:8081/crud`
